experimenting with neon effect

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -23,11 +23,9 @@ $colour-copy: #333;
 
 // fonts
 
-$fontMrDafoe: "MrDafoe", "Times", "Times New Roman", serif;;
-$fontWhitneyBlack: "WhitneyHTF-Black", "Arial", "Helvetica", sans-serif;
-$fontWhitneyBold: "WhitneyHTF-Bold", "Arial", "Helvetica", sans-serif;
-$fontWhitneyLight: "WhitneyHTF-Light", "Arial", "Helvetica", sans-serif;
-$fontWhitneyYellowtail: "Yellowtail-Regular", "Times", "Times New Roman", serif;;
+$fontBauhaus: "Bauhaus", "Times", "Times New Roman", serif;
+$fontbeon: "beon", "Times", "Times New Roman", serif;
+//$fontWhitneyBlack: "WhitneyHTF-Black", "Arial", "Helvetica", sans-serif;
 
 // sprites
 
