--- a/www/_includes/css/main.css
+++ b/www/_includes/css/main.css
@@ -343,6 +343,13 @@ Stylesheet:
 	Fonts
 
 *********************/
+@font-face {
+  font-family: 'beon';
+  src: url("/_includes/fonts/beon-webfont.eot");
+  src: url("/_includes/fonts/beon-webfont.woff") format("woff"), url("/_includes/fonts/beon-webfont.ttf") format("truetype"), url("/_includes/fonts/beon-webfont.svg#beon-webfont") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 /*********************
 
 Authors:
@@ -525,3 +532,214 @@ Stylesheet:
 	Home stylesheet
 
 *********************/
+.hero-container {
+  padding: 50px;
+  background-color: #333;
+}
+
+.neon-outer {
+  display: inline-block;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #FF1177, 0 0 20px #FF1177, 0 0 40px #FF1177, inset 0 0 2px #fff, inset 0 0 5px #fff, inset 0 0 10px #fff, inset 0 0 15px #FF1177, inset 0 0 20px #FF1177, inset 0 0 40px #FF1177;
+  -webkit-animation: flicker 5s linear infinite alternate;
+  -moz-animation: flicker 5s linear infinite alternate;
+  -ms-animation: flicker 5s linear infinite alternate;
+  -o-animation: flicker 5s linear infinite alternate;
+  animation: flicker 5s linear infinite alternate;
+}
+
+.neon {
+  text-align: center;
+  font-size: 50px;
+  margin: 20px;
+  color: #fff;
+  font-family: "beon", "Times", "Times New Roman", serif;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  -webkit-animation: flicker 5s linear infinite alternate;
+  -moz-animation: flicker 5s linear infinite alternate;
+  -ms-animation: flicker 5s linear infinite alternate;
+  -o-animation: flicker 5s linear infinite alternate;
+  animation: flicker 5s linear infinite alternate;
+}
+
+@-webkit-keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 0.7;
+  }
+  52% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 0.7;
+  }
+  54% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0.7;
+  }
+  79% {
+    opacity: 0.7;
+  }
+  79.5% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  80.5% {
+    opacity: 0;
+  }
+  81% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 0.7;
+  }
+  52% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 0.7;
+  }
+  54% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0.7;
+  }
+  79% {
+    opacity: 0.7;
+  }
+  79.5% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  80.5% {
+    opacity: 0;
+  }
+  81% {
+    opacity: 1;
+  }
+}
+@-ms-keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 0.7;
+  }
+  52% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 0.7;
+  }
+  54% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0.7;
+  }
+  79% {
+    opacity: 0.7;
+  }
+  79.5% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  80.5% {
+    opacity: 0;
+  }
+  81% {
+    opacity: 1;
+  }
+}
+@keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 0.7;
+  }
+  52% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 0.7;
+  }
+  54% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 0.7;
+  }
+  79% {
+    opacity: 0.7;
+  }
+  79.5% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  80.5% {
+    opacity: 0;
+  }
+  81% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+@-webkit-keyframes neon2 {
+  from {
+    box-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #FF1177, 0 0 20px #FF1177, 0 0 40px #FF1177, inset 0 0 2px #fff, inset 0 0 5px #fff, inset 0 0 10px #fff, inset 0 0 15px #FF1177, inset 0 0 20px #FF1177, inset 0 0 40px #FF1177;
+  }
+  to {
+    box-shadow: 0 0 4px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #FF1177, 0 0 40px #FF1177, 0 0 80px #FF1177, inset 0 0 4px #fff, inset 0 0 10px #fff, inset 0 0 20px #fff, inset 0 0 30px #FF1177, inset 0 0 40px #FF1177, inset 0 0 80px #FF1177;
+  }
+}
