--- a/src/sass/utilities/_fonts.scss
+++ b/src/sass/utilities/_fonts.scss
@@ -29,3 +29,13 @@ Stylesheet:
 // 	font-weight: normal;
 // 	font-style: normal;
 // }
+
+@font-face {
+	font-family: 'beon';
+	src:url("/_includes/fonts/beon-webfont.eot");
+	src:url("/_includes/fonts/beon-webfont.woff") format("woff"),
+		url("/_includes/fonts/beon-webfont.ttf")  format('truetype'),
+		url("/_includes/fonts/beon-webfont.svg#beon-webfont") format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
