--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -105,8 +105,9 @@ h3 {
 }
 
 p {
-	font-size: 14px;
-	padding: 7px 0;
+	font-size: 16px;
+	line-height: 24px;
+	padding: 20px 0;
 }
 
 a {
@@ -142,4 +143,67 @@ i {
   content: "";
   display: table;
   clear: both;
+}
+
+section {
+	padding: 100px 0;
+}
+
+.flicker {
+	@include animation(flicker 5s linear infinite alternate);
+}
+
+@include keyframes(flicker) {
+	0% {
+		opacity: 1;
+	}
+
+	49% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: 0;
+	}
+
+	51% {
+		opacity: 0.7;
+	}
+
+	52% {
+		opacity: 0;
+	}
+
+	53% {
+		opacity: 0.7;
+	}
+
+	54% {
+		opacity: 0;
+	}
+
+	55% {
+		opacity: 0.7;
+	}
+
+	79% {
+		opacity: 0.7;
+	}
+
+	79.5% {
+		opacity: 0;
+	}
+
+	80% {
+		opacity: 1;
+	}
+
+	80.5% {
+		opacity: 0;
+	}
+
+	81% {
+		opacity: 1;
+	}
+
 }
