--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -9,5 +9,11 @@ Stylesheet:
 *********************/
 
 header {
-
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 60px;
+	background-color: $colour-background-beta;
+	z-index: 2;
 }
