--- a/src/sass/views/_home.scss
+++ b/src/sass/views/_home.scss
@@ -74,14 +74,134 @@ Stylesheet:
 	background-position: center;
 	background-attachment: fixed;
 	box-shadow: inset 0 0 200px #000;
+	opacity: 0;
+	@include transition(opacity 0.4s ease-in-out);
 
 	&.venture {
 		background-image: url("/_includes/img/backgrounds/work-venture.jpg");
 		background-position: bottom;
+	}
+
+	&.trade {
+		background-image: url("/_includes/img/backgrounds/work-dulux.jpg");
+	}
+
+	&.daretoshare {
+		background-image: url("/_includes/img/backgrounds/work-venture.jpg");
+	}
+
+	&.wlty {
+		background-image: url("/_includes/img/backgrounds/work-pandora.jpg");
+	}
+
+	&.clubseat {
+		background-image: url("/_includes/img/backgrounds/work-seat.jpg");
+	}
+
+	&.active {
+		opacity: 1;
 	}
 }
 
 .selector-work {
 	background-color: $colour-background-beta;
 	height: 300px;
+	text-align: center;
+	padding: 50px 20px;
+
+	a {
+		display: inline-block;
+		width: 104px;
+		height: 100px;
+		background-repeat: no-repeat;
+		background-position: center;
+		opacity: 0.5;
+		@include transition(opacity 0.4s ease-in-out);
+
+		&:hover {
+			opacity: 1;
+		}
+	}
+
+	ul {
+		
+	}
+
+	li {
+		display: inline-block;
+		margin: 0 10px;
+		
+		&.chivas a {
+			background-image: url("/_includes/img/logos/chivas.png");
+		}
+
+		&.sainsburys a {
+			background-image: url("/_includes/img/logos/sainsburys.png");
+		}
+
+		&.dulux a {
+			background-image: url("/_includes/img/logos/dulux.png");
+		}
+
+		&.pandora a {
+			background-image: url("/_includes/img/logos/pandora.png");
+		}
+
+		&.seat a {
+			background-image: url("/_includes/img/logos/seat.png");
+		}
+
+		&.active a {
+			opacity: 1;
+		}
+	}
+}
+
+.project-description {
+	position: relative;
+	text-align: right;
+
+	h3, p {
+		color: $colour-copy-neg;
+		padding: 10px;
+	}
+
+	p {
+		padding-left: 100px;
+	}
+
+	a {
+		text-decoration: underline;
+	}
+
+	li {
+		position: absolute;
+		top: 0;
+		right: 0;
+		opacity: 0;
+		@include transition(opacity 0.4s ease-in-out);
+
+		&.active {
+			opacity: 1;
+		}
+	}
+}
+
+.contact-container {
+	text-align: center;
+
+	li {
+		display: inline-block;
+		width: 50px;
+		margin: 50px 25px 0;
+	}
+
+	a {
+		opacity: 0.5;
+		@include transition(opacity 0.4s ease-in-out);
+
+		&:hover {
+			opacity: 1;
+		}
+	}
 }
