adding a mobile nav

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,6 +16,7 @@ $colour-secondary: #eb714f;
 $colour-background: #f9f6f2;
 $colour-background-beta: #fff;
 $colour-background-neg: #333;
+$colour-background-delta: #000;
 
 $colour-header: #374049;
 $colour-header-beta: #fff;
