--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -9,5 +9,7 @@ Stylesheet:
 *********************/
 
 footer {
-
+	background-color: $colour-background-neg;
+	text-align: right;
+	color: $colour-copy-neg;
 }
