--- a/src/sass/views/_home.scss
+++ b/src/sass/views/_home.scss
@@ -22,6 +22,7 @@ Stylesheet:
 
 	@include breakpoint(false, desktop) {
 		padding: 200px 0 150px;
+		background-attachment: scroll;
 	}
 }
 
@@ -128,6 +129,10 @@ Stylesheet:
 
 	&.active {
 		opacity: 1;
+	}
+
+	@include breakpoint(false, desktop) {
+		background-attachment: scroll;
 	}
 }
 
