--- a/www/_includes/css/main.css
+++ b/www/_includes/css/main.css
@@ -706,25 +706,25 @@ header nav {
   header nav {
     position: fixed;
     top: 0;
-    left: 0;
+    left: calc(-100% + 60px);
     height: 100vh;
     width: calc(100% - 60px);
     background-color: #000;
     opacity: 0.9;
-    -moz-transform: translate(-100%, 0);
-    -ms-transform: translate(-100%, 0);
-    -webkit-transform: translate(-100%, 0);
-    transform: translate(-100%, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
     -moz-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
   }
   header nav.active {
-    -moz-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
+    -moz-transform: translate(100%, 0);
+    -ms-transform: translate(100%, 0);
+    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
   }
 }
 header li {
@@ -861,6 +861,7 @@ Stylesheet:
 @media all and (max-width: 960px) {
   .hero-container {
     padding: 200px 0 150px;
+    background-attachment: scroll;
   }
 }
 
@@ -964,6 +965,11 @@ Stylesheet:
 }
 .bg-work.active {
   opacity: 1;
+}
+@media all and (max-width: 960px) {
+  .bg-work {
+    background-attachment: scroll;
+  }
 }
 
 .selector-work {
