--- a/www/_includes/css/main.css
+++ b/www/_includes/css/main.css
@@ -854,6 +854,7 @@ Stylesheet:
   background-image: url("/_includes/img/backgrounds/bg-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 50% 0px;
   box-shadow: inset 0 0 200px #000;
 }
 @media all and (max-width: 960px) {
@@ -964,6 +965,7 @@ Stylesheet:
 @media all and (max-width: 960px) {
   .bg-work {
     background-attachment: scroll;
+    background-position: center;
   }
 }
 
